@@ -41,12 +41,12 @@ THEMES
     See THEMES
 
 COPYRIGHT
-    SLiM is copyright (c) 2004 by Simone Rota, Johannes Winkelmann
+    SLiM is copyright (c) 2004-05 by Simone Rota, Johannes Winkelmann
     and is available under the GNU General Public License.
     See the COPYING file for the complete license.
 
     Image handling code adapted and extended from xplanet 1.0.1,
-    copyright (c)2002-04 by Hari Nair
+    copyright (c) 2002-04 by Hari Nair
 
     Login.app is copyright (c) 1997, 1998 by Per Liden and is 
     licensed through the GNU General Public License. 
