@@ -1,7 +1,7 @@
 /* SLiM - Simple Login Manager
    Copyright (C) 1997, 1998 Per Liden
-   Copyright (C) 2004 Simone Rota <sip@varlock.com>
-   Copyright (C) 2004 Johannes Winkelmann <jw@tks6.net>
+   Copyright (C) 2004-05 Simone Rota <sip@varlock.com>
+   Copyright (C) 2004-05 Johannes Winkelmann <jw@tks6.net>
       
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
@@ -15,11 +15,8 @@
 App* LoginApp = 0;
 
 int main(int argc, char** argv) {
-    if(getuid() == 0) {
-        LoginApp = new App(argc, argv);
-        LoginApp->Run();
-    } else
-        cerr << APPNAME << ": only root can run this program" << endl;
+    LoginApp = new App(argc, argv);
+    LoginApp->Run();
     return 0;
 }
 
